// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Component: Sheet -  renders 1`] = `
<div
  className="sheet"
>
  <section>
    

    <a
      className="sheet-close"
      href="#"
    >
      
			
      <Icon
        icon="close"
      />
      
		
    </a>
  </section>
</div>
`;

exports[`Component: Sheet -  renders with a close icon 1`] = `
<div
  className="sheet"
>
  <section>
    

    <a
      className="sheet-close"
      href="#"
    >
      
			
      <Icon
        icon="close"
      />
      
		
    </a>
  </section>
</div>
`;

exports[`Component: Sheet -  renders with an ID 1`] = `
<div
  className="sheet"
  id="demo-sheet"
>
  <section>
    

    <a
      className="sheet-close"
      href="#"
    >
      
			
      <Icon
        icon="close"
      />
      
		
    </a>
  </section>
</div>
`;

exports[`Component: Sheet -  renders with children 1`] = `
<div
  className="sheet"
>
  <section>
    

    <a
      className="sheet-close"
      href="#"
    >
      
			
      <Icon
        icon="close"
      />
      
		
    </a>
    Test
  </section>
</div>
`;

exports[`Component: Sheet -  renders with the data-require-action attribute 1`] = `
<div
  className="sheet"
  data-require-action={true}
>
  <section>
    

    <a
      className="sheet-close"
      href="#"
    >
      
			
      <Icon
        icon="close"
      />
      
		
    </a>
  </section>
</div>
`;
